# unstrucuted_toyexamples

./: .gitignore  CMakeLists.txt  mymesh.msh
.github/: pull_request_template.md
Example-codes/: corner-visu.py
Examples/: CMakeLists.txt  atlasexample.cpp  diff.cpp  diffExplcit.cpp  diffOnEdges.cpp  edge_handeling.cpp  gradOfDiv.cpp  lap.cpp  lapExplcit.cpp  lapOnEdges.cpp  simple.cpp  unstructured_toylib.cpp  unstructured_toylib.h
Examples/Atlas/: CMakeLists.txt  atlasCellDiffusion.cpp  atlasCellDiffusionMPI.cpp  atlasCellField.cpp  atlasDelauny.cpp  atlasDiff.cpp  atlasGauss.cpp  atlasMeshGen.cpp  atlasPrint.cpp
GridLib/: CMakeLists.txt  cell.cpp  cell.h  edge.cpp  edge.h  grid.cpp  grid.h  vertex.h
StructuredLib/: CMakeLists.txt  grid.cpp  grid.h
